chore: add path perameters in the api spec

--- a/server/common/api.yml
+++ b/server/common/api.yml
@@ -17,6 +17,12 @@ paths:
         - Connections
       description: Record a connection made via TheLinkedPeople
       parameters:
+        - in: path
+          name: auth_token
+          required: true
+          schema:
+            type: string
+          description: Authentication Token to identify the user
         - in: query
           name: campaign_name
           schema:
