--- a/server/common/api.yml
+++ b/server/common/api.yml
@@ -55,9 +55,9 @@ paths:
                   example: https://www.example.com
                 connectedAt_date:
                   type: string
-                  pattern: '^\d{4}-\d{2}-\d{2}$'
-                  description: Date the connection was made in the format YYYY-MM-DD
-                  example: "2022-04-04"
+                  pattern: '^\d{4}-\d{2}-\d{2}\s\d{2}:\d{2}$'
+                  description: Date the connection was made in the format YYYY-MM-DD hh:mm
+                  example: "2022-04-05 05:51"
                 profile_email:
                   type: string
                   description: Connection email address
