--- a/package.json
+++ b/package.json
@@ -29,14 +29,16 @@
     }
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "body-parser": "^1.19.0",
     "dotenv": "^14.0.0",
     "express": "^4.17.1",
     "express-openapi-validator": "^4.13.3",
-    "monday-sdk-js": "^0.1.3",
+    "moment": "^2.29.2",
     "pino": "^7.4.1"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/chai": "^4.2.22",
     "@types/express": "^4.17.13",
     "@types/mocha": "^9.0.0",
