--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/node": "^17.0.8",
     "@types/pino": "^7.0.4",
     "@types/request": "^2.48.8",
+    "@types/shelljs": "^0.8.11",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
@@ -60,6 +61,7 @@
     "pino-pretty": "^7.2.0",
     "prettier": "^2.5.0",
     "request": "^2.88.2",
+    "shelljs": "^0.8.5",
     "standard-version": "^9.3.2",
     "supertest": "^6.1.6",
     "ts-node": "^10.4.0",
