feat: add Sentry issue montiroing and tracking

--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,6 @@ APP_PORT=3000
 LOG_LEVEL=debug
 LOG_ENABLED=true
 REQUEST_LIMIT=100kb
+SENTRY_DSN=https://examplePublicKey@o0.ingest.sentry.io/0
 AUTH_TOKEN=TOKEN
 MONDAY_AUTH_TOKEN=MONDAY_AUTH_TOKEN
