--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     }
   },
   "dependencies": {
+    "@sentry/node": "^6.19.6",
+    "@sentry/tracing": "^6.19.6",
     "axios": "^0.26.1",
     "body-parser": "^1.19.0",
     "dotenv": "^14.0.0",
