--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,7 @@ LOG_LEVEL=debug
 LOG_ENABLED=true
 REQUEST_LIMIT=100kb
 SENTRY_DSN=https://examplePublicKey@o0.ingest.sentry.io/0
-AUTH_TOKEN=TOKEN
+HUDDLECO_AUTH_TOKEN=HUDDLECO_AUTH_TOKEN
+THECOACHINGDIRECTORY_AUTH_TOKEN=THECOACHINGDIRECTORY_AUTH_TOKEN
+SALLY_A_CURTIS_AUTH_TOKEN=SALLY_A_CURTIS_AUTH_TOKEN
 MONDAY_AUTH_TOKEN=MONDAY_AUTH_TOKEN
