--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,6 @@ SENTRY_DSN=https://examplePublicKey@o0.ingest.sentry.io/0
 HUDDLECO_AUTH_TOKEN=HUDDLECO_AUTH_TOKEN
 THECOACHINGDIRECTORY_AUTH_TOKEN=THECOACHINGDIRECTORY_AUTH_TOKEN
 SALLY_A_CURTIS_AUTH_TOKEN=SALLY_A_CURTIS_AUTH_TOKEN
+STUDIO_BAND_AUTH_TOKEN=STUDIO_BAND_AUTH_TOKEN
 MONDAY_AUTH_TOKEN=MONDAY_AUTH_TOKEN
+STUDIO_BAND_MONDAY_AUTH_TOKEN=STUDIO_BAND_MONDAY_AUTH_TOKEN
