--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "pino": "^7.4.1"
   },
   "devDependencies": {
+    "@commitlint/config-conventional": "^17.0.3",
     "@types/axios": "^0.14.0",
     "@types/chai": "^4.2.22",
     "@types/express": "^4.17.13",
@@ -52,6 +53,7 @@
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
     "chai": "^4.3.4",
+    "commitlint": "^17.0.3",
     "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
