feat: install monday auth token for the coaching directory client

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,4 @@ SALLY_A_CURTIS_AUTH_TOKEN=SALLY_A_CURTIS_AUTH_TOKEN
 STUDIO_BAND_AUTH_TOKEN=STUDIO_BAND_AUTH_TOKEN
 MONDAY_AUTH_TOKEN=MONDAY_AUTH_TOKEN
 STUDIO_BAND_MONDAY_AUTH_TOKEN=STUDIO_BAND_MONDAY_AUTH_TOKEN
+THECOACHINGDIRECTORY_MONDAY_AUTH_TOKEN=THECOACHINGDIRECTORY_MONDAY_AUTH_TOKEN
