--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ REQUEST_LIMIT=100kb
 SENTRY_DSN=https://examplePublicKey@o0.ingest.sentry.io/0
 HUDDLECO_AUTH_TOKEN=HUDDLECO_AUTH_TOKEN
 THECOACHINGDIRECTORY_AUTH_TOKEN=THECOACHINGDIRECTORY_AUTH_TOKEN
+KRISTI_AUTH_TOKEN=KRISTI_AUTH_TOKEN
 SALLY_A_CURTIS_AUTH_TOKEN=SALLY_A_CURTIS_AUTH_TOKEN
 MONDAY_AUTH_TOKEN=MONDAY_AUTH_TOKEN
 THECOACHINGDIRECTORY_MONDAY_AUTH_TOKEN=THECOACHINGDIRECTORY_MONDAY_AUTH_TOKEN
