--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@commitlint/config-conventional": "^17.0.3",
     "@types/axios": "^0.14.0",
     "@types/chai": "^4.2.22",
+    "@types/chai-as-promised": "^7.1.5",
     "@types/express": "^4.17.13",
     "@types/mocha": "^9.0.0",
     "@types/node": "^17.0.8",
@@ -53,6 +54,7 @@
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
     "chai": "^4.3.4",
+    "chai-as-promised": "^7.1.1",
     "commitlint": "^17.0.3",
     "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0",
