--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "devDependencies": {
     "@commitlint/config-conventional": "^17.0.3",
     "@types/axios": "^0.14.0",
+    "@types/axios-mock-adapter": "^1.10.0",
     "@types/chai": "^4.2.22",
     "@types/chai-as-promised": "^7.1.5",
     "@types/express": "^4.17.13",
@@ -53,6 +54,7 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
+    "axios-mock-adapter": "^1.21.2",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "commitlint": "^17.0.3",
