--- a/package.json
+++ b/package.json
@@ -31,13 +31,15 @@
   "dependencies": {
     "@sentry/node": "^6.19.6",
     "@sentry/tracing": "^6.19.6",
+    "@types/sinon": "^10.0.13",
     "axios": "^0.26",
     "body-parser": "^1.19.0",
     "dotenv": "^14.0.0",
     "express": "^4.17.1",
     "express-openapi-validator": "^4.13.3",
     "moment": "^2.29.2",
-    "pino": "^7.4.1"
+    "pino": "^7.4.1",
+    "sinon": "^14.0.1"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.0.3",
