--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "express": "^4.18.2",
     "express-openapi-validator": "^4.13.3",
     "moment": "^2.29.2",
+    "mustache": "^4.2.0",
     "pino": "^7.4.1",
     "sinon": "^14.0.1"
   },
@@ -49,6 +50,7 @@
     "@types/chai-as-promised": "^7.1.5",
     "@types/express": "^4.17.14",
     "@types/mocha": "^9.0.0",
+    "@types/mustache": "^4.2.2",
     "@types/node": "^17.0.8",
     "@types/pino": "^7.0.4",
     "@types/request": "^2.48.8",
