feat: add support for JACKIEs connection

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ SENTRY_DSN=https://examplePublicKey@o0.ingest.sentry.io/0
 HUDDLECO_AUTH_TOKEN=HUDDLECO_AUTH_TOKEN
 THECOACHINGDIRECTORY_AUTH_TOKEN=THECOACHINGDIRECTORY_AUTH_TOKEN
 KRISTI_AUTH_TOKEN=KRISTI_AUTH_TOKEN
+JACKIE_AUTH_TOKEN=JACKIE_AUTH_TOKEN
 SALLY_A_CURTIS_AUTH_TOKEN=SALLY_A_CURTIS_AUTH_TOKEN
 MONDAY_AUTH_TOKEN=MONDAY_AUTH_TOKEN
 THECOACHINGDIRECTORY_MONDAY_AUTH_TOKEN=THECOACHINGDIRECTORY_MONDAY_AUTH_TOKEN
