chore: add TOMTOM_API_KEY in the example environment variable file

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,4 @@ JACKIE_AUTH_TOKEN=JACKIE_AUTH_TOKEN
 SALLY_A_CURTIS_AUTH_TOKEN=SALLY_A_CURTIS_AUTH_TOKEN
 MONDAY_AUTH_TOKEN=MONDAY_AUTH_TOKEN
 THECOACHINGDIRECTORY_MONDAY_AUTH_TOKEN=THECOACHINGDIRECTORY_MONDAY_AUTH_TOKEN
+TOMTOM_API_KEY=TOMTOM_API_KEY
